Added user upload to amazon aws s3

--- a/Post/templates/Post/blog-detail.html
+++ b/Post/templates/Post/blog-detail.html
@@ -3,7 +3,7 @@
 
 
 {% block custom_css %}
-<link rel="stylesheet" href="{% static 'Post/css/blog-detail.css' %}">
+<link rel="stylesheet" href="{% static 'post/css/blog-detail.css' %}">
 {% endblock %}
 
 {% block content %}
