--- a/main_site/templates/main_site/base.html
+++ b/main_site/templates/main_site/base.html
@@ -6,7 +6,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
           integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
@@ -15,6 +14,7 @@
     <link rel="stylesheet" href="{% static 'main_site/css/custom-css/base.css' %}">
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
     <script src="{% static 'main_site/javascript/jquery/jquery.min.js' %}" charset="utf-8"></script>
+    <title>Blermo</title>
 </head>
 <body data-spy="scroll" data-target="#navbar" data-offset="0">
 
